--- a/NihEngine/NihEngine.vcxproj.filters
+++ b/NihEngine/NihEngine.vcxproj.filters
@@ -84,4 +84,10 @@
       <Filter>Fichiers de ressources</Filter>
     </Image>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="..\CMakeLists.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\CMakeSettings.json" />
+  </ItemGroup>
 </Project>
