--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,8 @@ project(NihEngine)
 
 set(CMAKE_CXX_STANDARD 20)
 
+add_compile_options(/EHsc)
+
 file(GLOB_RECURSE SOURCES "NihEngine/*.cpp")
 
 add_executable(NihEngine ${SOURCES})
@@ -13,3 +15,5 @@ target_include_directories(NihEngine PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/NihEngi
 set_target_properties(NihEngine PROPERTIES WIN32_EXECUTABLE TRUE)
 
 target_link_libraries(NihEngine PRIVATE User32 Gdi32)
+
+add_subdirectory(Tests)
