--- a/Tests/CMakeLists.txt
+++ b/Tests/CMakeLists.txt
@@ -5,6 +5,7 @@ FetchContent_Declare(
   GIT_REPOSITORY https://github.com/google/googletest.git
   GIT_TAG        release-1.11.0
 )
+set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
 FetchContent_MakeAvailable(googletest)
 
 cmake_minimum_required(VERSION 3.10)
@@ -13,11 +14,12 @@ project(test_me)
 
 enable_testing()
 
-find_package(GTest REQUIRED)
-include(GoogleTest)
+#find_package(GTest REQUIRED)
 
 file(GLOB_RECURSE TEST_SOURCES "*.cpp")
 add_executable(runUnitTests ${TEST_SOURCES})
-target_link_libraries(runUnitTests GTest::GTest GTest::Main)
+
+include(GoogleTest)
+target_link_libraries(runUnitTests GTest::gtest_main)
 
 gtest_discover_tests(runUnitTests)
