--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,3 +16,5 @@ jobs:
         run: cmake -G "Visual Studio 17 2022" .
       - name: Build
         run: cmake --build . --config Release
+      - name: Tests
+        run: ./NihEngine/Tests/Release/runUnitTests.exe
