--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,4 +17,4 @@ jobs:
       - name: Build
         run: cmake --build . --config Release
       - name: Tests
-        run: ./NihEngine/Tests/Release/runUnitTests.exe
+        run: ./runUnitTests.exe
