--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,6 +15,8 @@ jobs:
       - name: Configure
         run: cmake -G "Visual Studio 17 2022" .
       - name: Build
-        run: cmake --build . --config Release
+        run: cmake --build build --config Release
       - name: Tests
-        run: ./runUnitTests.exe
+        run: |
+          cd build
+          ctest -c Release -W
