--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
       - name: Configure
-        run: cmake -G "Visual Studio 17 2022" .
+        run: cmake -G "Visual Studio 17 2022" -Bbuild
       - name: Build
         run: cmake --build build --config Release
       - name: Tests
