--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,29 @@ project(NihEngine)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-file(GLOB_RECURSE SOURCES "NihEngine/*.cpp")
+set_property(GLOBAL PROPERTY USE_FOLDERS ON)
+
+file(GLOB_RECURSE SOURCES "NihEngine/*.cpp" "NihEngine/*.h")
+
+foreach(FILE ${SOURCES}) 
+    # Get the directory of the source file
+    get_filename_component(PARENT_DIR "${FILE}" DIRECTORY)
+
+    # Remove common directory prefix to make the group
+    string(REPLACE "${CMAKE_CURRENT_SOURCE_DIR}" "" GROUP "${PARENT_DIR}")
+
+    # Make sure we are using windows slashes
+    string(REPLACE "/" "\\" GROUP "${GROUP}")
+
+    # Group into "Source Files" and "Header Files"
+    if ("${FILE}" MATCHES ".*\\.cpp")
+       set(GROUP "Source Files${GROUP}")
+    elseif("${FILE}" MATCHES ".*\\.h")
+       set(GROUP "Header Files${GROUP}")
+    endif()
+
+    source_group("${GROUP}" FILES "${FILE}")
+endforeach()
 
 add_executable(NihEngine ${SOURCES})
 
