--- a/.gitignore
+++ b/.gitignore
@@ -362,4 +362,7 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+
 /build.bat
+/clean_and_build.bat
+/vs-chromium-project.txt
